# KuspiOspi

./: .gitmodules  CMakeLists.txt
bsp/: stm32l4q5.ld
cmake/: toolchain-arm-none-eabi.cmake
src/: main.c  syscalls.c
